; ModuleID = '/home/carl/AnghaBench/kphp-kdb/util/extr_replicator.c_compute_slaves_stats.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/util/extr_replicator.c_compute_slaves_stats.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.related_binlog = type { i32 }

@local_rbs = common dso_local global i32 0, align 4
@LR = common dso_local global %struct.related_binlog* null, align 8
@LRF_MASTER = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @compute_slaves_stats(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.related_binlog*, align 8
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = call i32 @memset(i32* %5, i32 0, i32 16)
  store i32 0, i32* %3, align 4
  br label %7

7:                                                ; preds = %32, %1
  %8 = load i32, i32* %3, align 4
  %9 = load i32, i32* @local_rbs, align 4
  %10 = icmp slt i32 %8, %9
  br i1 %10, label %11, label %35

11:                                               ; preds = %7
  %12 = load %struct.related_binlog*, %struct.related_binlog** @LR, align 8
  %13 = load i32, i32* %3, align 4
  %14 = sext i32 %13 to i64
  %15 = getelementptr inbounds %struct.related_binlog, %struct.related_binlog* %12, i64 %14
  store %struct.related_binlog* %15, %struct.related_binlog** %4, align 8
  %16 = load %struct.related_binlog*, %struct.related_binlog** %4, align 8
  %17 = getelementptr inbounds %struct.related_binlog, %struct.related_binlog* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load i32, i32* @LRF_MASTER, align 4
  %20 = and i32 %18, %19
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %29, label %22

22:                                               ; preds = %11
  %23 = load i32*, i32** %2, align 8
  %24 = load %struct.related_binlog*, %struct.related_binlog** %4, align 8
  %25 = call i64 @classify_slave(%struct.related_binlog* %24)
  %26 = getelementptr inbounds i32, i32* %23, i64 %25
  %27 = load i32, i32* %26, align 4
  %28 = add nsw i32 %27, 1
  store i32 %28, i32* %26, align 4
  br label %29

29:                                               ; preds = %22, %11
  %30 = load %struct.related_binlog*, %struct.related_binlog** %4, align 8
  %31 = call i32 @update_rb_stats(%struct.related_binlog* %30)
  br label %32

32:                                               ; preds = %29
  %33 = load i32, i32* %3, align 4
  %34 = add nsw i32 %33, 1
  store i32 %34, i32* %3, align 4
  br label %7

35:                                               ; preds = %7
  ret void
}

declare dso_local i32 @memset(i32*, i32, i32) #1

declare dso_local i64 @classify_slave(%struct.related_binlog*) #1

declare dso_local i32 @update_rb_stats(%struct.related_binlog*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
